--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ django-environ==0.11.2
 django-extensions==3.2.3
 django-taggit==4.0.0
 executing==1.2.0
-ipython==8.15.0
+ipython==8.16.0
 jedi==0.19.0
+Markdown==3.4.4
 matplotlib-inline==0.1.6
 parso==0.8.3
 pexpect==4.8.0
@@ -21,6 +22,6 @@ Pygments==2.16.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
-traitlets==5.10.0
+traitlets==5.10.1
 tzdata==2023.3
-wcwidth==0.2.6
+wcwidth==0.2.7
